generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// 用户表
model User {
  id            String     @id @default(cuid())
  email         String     @unique
  name          String
  avatar        String?
  password      String     // bcrypt 哈希
  emailVerified DateTime?  @map("email_verified_at")  // 邮箱验证时间
  notebooks     Notebook[]
  userVideos    UserVideo[]
  timestampNotes VideoTimestampNote[]
  videoTags      VideoTag[]
  videoTagRelations VideoTagRelation[]
  chatMessages   ChatMessage[]
  createdAt     DateTime   @default(now())
  updatedAt     DateTime   @updatedAt

  @@map("users")
}

// 邮箱验证 Token
model EmailVerificationToken {
  id        String   @id @default(cuid())
  email     String
  token     String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([email])
  @@map("email_verification_tokens")
}

// 笔记本
model Notebook {
  id          String          @id @default(cuid())
  userId      String
  title       String
  description String?
  coverImage  String?
  tags        String[]
  mode        String          @default("manual")
  rule        Json?
  videoCount  Int             @default(0)
  user        User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  videos      NotebookVideo[]
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt

  @@index([userId])
  @@map("notebooks")
}

// 视频
model Video {
  id                  String           @id @default(cuid())
  bvid                String           @unique
  title               String
  pic                 String?
  desc                String?
  duration            Int
  ownerName           String           @map("owner_name")
  ownerMid            String           @map("owner_mid")
  cid                 String?
  subtitleText        String           @map("subtitle_text")
  subtitleSource      String           @default("cc") @map("subtitle_source")
  summary             String?
  knowledgeExtracted  Boolean          @default(false) @map("knowledge_extracted")
  notebookVideos      NotebookVideo[]
  knowledgePoints     KnowledgePoint[]
  userVideos          UserVideo[]
  timestampNotes      VideoTimestampNote[]
  tagRelations        VideoTagRelation[]
  chatMessages        ChatMessage[]
  createdAt           DateTime         @default(now())
  updatedAt           DateTime         @updatedAt

  @@index([ownerMid])
  @@map("videos")
}

// 用户-视频历史关联（用于按用户隔离历史记录）
model UserVideo {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  videoId   String   @map("video_id")
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  video     Video    @relation(fields: [videoId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, videoId])
  @@index([userId, updatedAt])
  @@index([videoId])
  @@map("user_videos")
}

// 笔记本-视频关联
model NotebookVideo {
  id         String   @id @default(cuid())
  notebookId String   @map("notebook_id")
  videoId    String   @map("video_id")
  notes      String?
  order      Int      @default(0)
  notebook   Notebook @relation(fields: [notebookId], references: [id], onDelete: Cascade)
  video      Video    @relation(fields: [videoId], references: [id], onDelete: Cascade)
  addedAt    DateTime @default(now()) @map("added_at")

  @@unique([notebookId, videoId])
  @@index([notebookId])
  @@index([videoId])
  @@map("notebook_videos")
}

// 知识点
model KnowledgePoint {
  id        String     @id @default(cuid())
  videoId   String     @map("video_id")
  type      String     // topic | keyPoint | concept | qaPair
  content   String
  timestamp Int?
  metadata  Json?
  video     Video      @relation(fields: [videoId], references: [id], onDelete: Cascade)
  embedding Embedding?
  createdAt DateTime   @default(now())

  @@index([videoId])
  @@index([type])
  @@map("knowledge_points")
}

// 向量嵌入
model Embedding {
  id                String          @id @default(cuid())
  knowledgePointId  String          @unique @map("knowledge_point_id")
  vector            Unsupported("vector(1024)")
  knowledgePoint    KnowledgePoint  @relation(fields: [knowledgePointId], references: [id], onDelete: Cascade)
  createdAt         DateTime        @default(now())

  @@map("embeddings")
}

// UP主档案
model UPProfile {
  id           String    @id @default(cuid())
  mid          String    @unique
  name         String
  face         String?
  sign         String?
  videoCount   Int?      @map("video_count")
  lastSyncedAt DateTime? @map("last_synced_at")
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  @@map("up_profiles")
}

// 视频时间戳笔记
model VideoTimestampNote {
  id           String   @id @default(cuid())
  userId       String   @map("user_id")
  videoId      String   @map("video_id")
  timestampSec Int      @map("timestamp_sec")
  content      String
  sourceText   String?  @map("source_text")
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  video        Video    @relation(fields: [videoId], references: [id], onDelete: Cascade)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@index([userId, videoId, timestampSec])
  @@index([videoId])
  @@map("video_timestamp_notes")
}

// 用户自定义视频标签
model VideoTag {
  id          String             @id @default(cuid())
  userId      String             @map("user_id")
  name        String
  color       String?
  user        User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  videoTags   VideoTagRelation[]
  createdAt   DateTime           @default(now())
  updatedAt   DateTime           @updatedAt

  @@unique([userId, name])
  @@index([userId, createdAt])
  @@map("video_tags")
}

// 视频标签关联
model VideoTagRelation {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  videoId   String   @map("video_id")
  tagId     String   @map("tag_id")
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  video     Video    @relation(fields: [videoId], references: [id], onDelete: Cascade)
  tag       VideoTag @relation(fields: [tagId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())

  @@unique([userId, videoId, tagId])
  @@index([userId, tagId])
  @@index([videoId])
  @@map("video_tag_relations")
}

// 视频对话历史
model ChatMessage {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  videoId   String   @map("video_id")
  role      String
  content   String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  video     Video    @relation(fields: [videoId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())

  @@index([userId, videoId, createdAt])
  @@index([videoId])
  @@map("chat_messages")
}
